--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -79,16 +79,18 @@
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewPager"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:layout_marginTop="16dp"
                     android:padding="5dp"
+                    android:layout_margin="10dp"
                     app:layout_constraintTop_toBottomOf="@+id/imgProfile"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"/>
 
                 <GridLayout
                     android:id="@+id/buttonGrid"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:columnCount="2"
@@ -99,15 +101,14 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/viewPager">
 
-                    <!-- Button 1: Find Exam Seat -->
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
                         android:layout_margin="8dp"
-                        app:cardCornerRadius="15dp"
-                        app:cardBackgroundColor="@android:color/white">
+                        app:cardCornerRadius="12dp"
+                        app:cardElevation="6dp"
+                        android:layout_rowWeight="1"
+                        android:layout_columnWeight="1">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -117,32 +118,29 @@
                             android:padding="16dp">
 
                             <ImageView
-                                android:id="@+id/btnFindExamSeatIcon"
-                                android:layout_width="142dp"
-                                android:layout_height="62dp"
-                                android:contentDescription="@string/find_exam_seat_icon"
-                                android:src="@drawable/ic_exam_seat" />
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:src="@drawable/ic_exam_seat"/>
 
                             <TextView
-                                android:id="@+id/btnFindExamSeatText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Find Exam Seat"
-                                android:textAlignment="center" />
-
+                                android:textAlignment="center"
+                                android:textColor="@color/black"
+                                android:layout_marginTop="8dp"/>
                         </LinearLayout>
-
                     </androidx.cardview.widget.CardView>
 
-                    <!-- Button 2: Find Teacher Chamber -->
+                    <!-- Find Teacher Chamber Button -->
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
                         android:layout_margin="8dp"
-                        app:cardCornerRadius="15dp"
-                        app:cardBackgroundColor="@android:color/white">
+                        app:cardCornerRadius="12dp"
+                        app:cardElevation="6dp"
+                        android:layout_rowWeight="1"
+                        android:layout_columnWeight="1">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -152,33 +150,29 @@
                             android:padding="16dp">
 
                             <ImageView
-                                android:id="@+id/btnFindTeacherChamberIcon"
-                                android:layout_width="142dp"
-                                android:layout_height="62dp"
-                                android:contentDescription="@string/find_teacher_chamber_icon"
-                                android:src="@drawable/ic_teacher_chamber"
-                                app:tint="#242222" />
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:src="@drawable/ic_teacher_chamber"/>
 
                             <TextView
-                                android:id="@+id/btnFindTeacherChamberText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Find Teacher Chamber"
-                                android:textAlignment="center" />
-
+                                android:textAlignment="center"
+                                android:textColor="@color/black"
+                                android:layout_marginTop="8dp"/>
                         </LinearLayout>
-
                     </androidx.cardview.widget.CardView>
 
-                    <!-- Button 3: Contribution -->
+                    <!-- Contribution Button -->
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
                         android:layout_margin="8dp"
-                        app:cardCornerRadius="15dp"
-                        app:cardBackgroundColor="@android:color/white">
+                        app:cardCornerRadius="12dp"
+                        app:cardElevation="6dp"
+                        android:layout_rowWeight="1"
+                        android:layout_columnWeight="1">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -188,32 +182,29 @@
                             android:padding="16dp">
 
                             <ImageView
-                                android:id="@+id/btnContributionIcon"
-                                android:layout_width="142dp"
-                                android:layout_height="62dp"
-                                android:contentDescription="@string/contribution_icon"
-                                android:src="@drawable/ic_contribution" />
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:src="@drawable/ic_contribution"/>
 
                             <TextView
-                                android:id="@+id/btnContributionText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Contribution"
-                                android:textAlignment="center" />
-
+                                android:textAlignment="center"
+                                android:textColor="@color/black"
+                                android:layout_marginTop="8dp"/>
                         </LinearLayout>
-
                     </androidx.cardview.widget.CardView>
 
-                    <!-- Button 4: Calendar -->
+                    <!-- Calendar Button -->
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
                         android:layout_margin="8dp"
-                        app:cardCornerRadius="15dp"
-                        app:cardBackgroundColor="@android:color/white">
+                        app:cardCornerRadius="12dp"
+                        app:cardElevation="6dp"
+                        android:layout_rowWeight="1"
+                        android:layout_columnWeight="1">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -223,22 +214,20 @@
                             android:padding="16dp">
 
                             <ImageView
-                                android:id="@+id/btnCalendarIcon"
-                                android:layout_width="142dp"
-                                android:layout_height="62dp"
-                                android:contentDescription="@string/calendar_icon"
-                                android:src="@drawable/ic_calendar" />
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:src="@drawable/ic_calendar"/>
 
                             <TextView
-                                android:id="@+id/btnCalendarText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Calendar"
-                                android:textAlignment="center" />
-
+                                android:textAlignment="center"
+                                android:textColor="@color/black"
+                                android:layout_marginTop="8dp"/>
                         </LinearLayout>
-
                     </androidx.cardview.widget.CardView>
+
 
                 </GridLayout>
 
